[tool.poetry]
name = "shap-adaptive-boosting"
version = "0.0.1"
description = "Versions of AdaBoost and RUSBoost compatible with TreeSHAP and respective TreeSHAP Explainers."
authors = ["Emre Arkan <emre.arkan@alexanderthamm.com>"]
packages = [{ include = "shap_adaptive_boosting", from = "src" }]
include = ["src/shap_adaptive_boosting/res/*"]

[tool.poetry.dependencies]
python = ">=3.10"
PyYAML = "^6.0"
importlib-metadata = { version = "^1.0", python = "<3.8" }
imbalanced-learn = "==0.13.0"
shap = "==0.48.0"
matplotlib = "^3.7.2"
pre-commit = "^3.7.0"
pytest = "^8.4.1"
pytest-cov = "^5.0.0"
ruff = "^0.6.3"
bandit = { extras = ["toml"], version = "^1.7.9" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = [".venv"]

[tool.bandit.assert_used]
skips = ["*/*_test.py", "*/test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 80
indent-width = 4
fix = true
show-fixes = true

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "D", # pydocstyle
    "D404", # docstring
    "E501", # line too long
]
fixable = ["I001"]
ignore = ["D100", "D104", "D101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
